--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
   "dependencies": {
     "expo": "~39.0.2",
     "expo-status-bar": "~1.0.2",
+    "googleapis": "^39.2.0",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.32",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-moment": "^1.0.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "expo-calendar": "~8.5.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
